# backend

cplusplus-char-replace/app/char-replace/: Program.cpp  char-replace.sln  char-replace.vcxproj
cplusplus-read-market/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cplusplus-read-market/app/: source.csv
cplusplus-read-market/app/read-market/: apple-inc-appl.csv  readMarket.cpp  source.csv
java-llama-chat/app/llama-chat/: pom.xml
java-llama-spring-boot/app/ollama/: ollama-bak.ps1  ollama.ps1  ollama.template.ps1  pom.xml
java-neo4j/administrator.ai/administrator/: build.gradle.kts  gradle.properties  settings.gradle.kts
java-pmml4s/pmml4s/: build.gradle.kts  settings.gradle.kts
net-web-api/: web-api.sln
python-autocomplete/app/: auto.py
python-camera/app/: camera.py
python-char-replace/app/: char-replace.py
python-chatbot/files/: chat_model.keras
python-chatbot/lib/: file.py  model.py
python-generate-image/app/: generate-image.py
python-llama-chat/app/: chat.py
python-predict-class/app/: predict-class.py
python-predict-class/app/data/: dataset.csv
python-predict-values-v1/app/: dataset.csv  predict.py
python-predict-values-v1/document/: dataset.xlsx
python-predict-values-v2/app/: predict.py
python-review-message/app/: connect.db.py  review.message.py  write.file.py
python/chatbot/: chat_model.keras  file.py  loader.py  main.py  model.py  tokenizer.pickle  tokenizer.py
python/chatbot/files/: intents.json  tokenizer.pickle
r-topmml/ToPMML/: Elnino.pmml  ToPMML.R
react/chatbot/: package-lock.json  package.json
(+116 files in other folders)
